--- a/copilot/pipelines/production-pipeline/buildspec.yml
+++ b/copilot/pipelines/production-pipeline/buildspec.yml
@@ -17,7 +17,9 @@ phases:
       - ls -l
       - export COLOR="false"
       - export CI="true"
+      - mv .ruby-version .ruby-version.bak || true
       - pipeline=$(cat $CODEBUILD_SRC_DIR/copilot/pipelines/production-pipeline/manifest.yml | ruby -ryaml -rjson -e 'puts JSON.pretty_generate(YAML.load(ARGF))')
+      - mv .ruby-version.bak .ruby-version || true
       - pl_envs=$(echo $pipeline | jq -r '.stages[].name')
       # Find all the local services in the workspace.
       - svc_ls_result=$(./copilot-linux svc ls --local --json)
