--- a/appspec.yml
+++ b/appspec.yml
@@ -1,18 +1,10 @@
 version: 0.0
-os: linux
-files:
-  - source: codedeploy/config/ruby-codedeploy-demo-nginx.conf
-    destination: /etc/nginx/conf.d
-  - source: codedeploy/config/nginx.conf
-    destination: /etc/nginx
-hooks:
-  BeforeInstall:
-    - location: codedeploy/scripts/stop_rails_server.sh
-      runas: root 
-    - location: codedeploy/scripts/configure_nginx.sh
-    - location: codedeploy/scripts/install_dependencies.sh
-  AfterInstall:
-    - location: codedeploy/scripts/start_rails_server.sh
-      runas: root 
-    - location: codedeploy/scripts/start_nginx.sh
-      runas: root 
+Resources:
+  - TargetService:
+      Type: AWS::ECS::Service
+      Properties:
+        TaskDefinition: arn:aws:ecs:us-east-1:231544052460:task-definition/art-gallery-manual:2
+        LoadBalancerInfo:
+          ContainerName: my_art_gallery_prod
+          ContainerPort: 3000
+        PlatformVersion: "LATEST"
