--- a/buildspec.ecs.yml
+++ b/buildspec.ecs.yml
@@ -5,34 +5,33 @@ phases:
       - aws --version
       - pip3 install awscli --upgrade --user
       - aws --version
-      - yum -q install -y jq
   pre_build: 
     commands: 
     - echo Logging in to Amazon ECR.... 
+
     # update the following line with your own region
     - REPOSITORY_URI=your_repo_uri_here
     - DEFAULT_REGION=us-east-1
+
     - aws ecr get-login-password --region $DEFAULT_REGION | docker login --username AWS --password-stdin $REPOSITORY_URI
-    - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-    - IMAGE_TAG=${COMMIT_HASH:=latest}
+
   build: 
     commands: 
     - echo Build started on `date` 
     - echo Building the Docker image... 
-    # update the following line with the name of your own ECR repository
-    - docker build -t $REPOSITORY_URI:latest .
-    # update the following line with the URI of your own ECR repository (view the Push Commands in the console)
-    - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG 
+
+    - docker build -t my_art_gallery .
+    - docker tag my_art_gallery $REPOSITORY_URI\:latest 
   post_build: 
     commands: 
     - echo Build completed on `date` 
     - echo pushing to repo
+
     # update the following line with the URI of your own ECR repository
-    - docker push $REPOSITORY_URI:latest
-    - docker push $REPOSITORY_URI:$IMAGE_TAG
+    - docker push $REPOSITORY_URI\:latest
+
     - echo Writing image definitions file... 
-    #- printf '[{"ImageURI":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
-    - printf '{"ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
+    - printf '{"ImageURI":"%s"}' $REPOSITORY_URI\:latest > imageDetail.json
     - cp appspec.ecs.yml appspec.yml
 artifacts:
   files:
